[metadata]
name = usbrelay_py-darrylb123
version = 1.0
author = Sean Mollet
author_email = usbrelay@noreply.github.com
description = A package to operate some usb connected electrical relays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darrylb123/usbrelay
project_urls =
    Bug Tracker = https://github.com/darrylb123/usbrelay/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL V2.0
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
